--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {"DefaultConnection": "Server=ROGALLY\\SQLEXPRESS02; Database=RPS_DB; Trusted_Connection=True; TrustServerCertificate=True"}
 }
